# docspec

./: .gitignore  CLAUDE.md  LICENSE  README.md  audit-addendum.md  audit-report.md  claude-code-prompt.md  docspec-poc.jsx  docspec-research-paper-outline.md  docspec-v3-final-spec.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml
.github/workflows/: acceptance-gates.yml  examples.yml  java.yml  python-processor.yml  rust-processor.yml  site.yml  typescript-processor.yml
csharp/annotations/: DocContextAttribute.cs  DocCrossRefAttributes.cs  DocDstiAttributes.cs  DocMethodAttribute.cs
csharp/dsti-generator/: DocSpec.DstiGenerator.csproj  Generator.cs
csharp/frameworks/: ef-core.json  system-text-json.json
csharp/processor/: DocSpecAnalyzer.cs
docs/plans/: 2026-03-27-docspec-restructure-and-fix.md  2026-03-28-final-design.md  2026-03-28-java-first-implementation.md
docspec-docs/: docspec-annotations.json  docspec-maven-plugin.json  docspec-processor.json  docspec.config.yaml  package.json
dsti/core/: package-lock.json  package.json
examples/csharp-full-annotated/: CSharpFullAnnotated.csproj  OrderService.cs
examples/csharp-minimal/: CSharpMinimal.csproj  Service.cs
examples/csharp-webapi-zero-config/: Program.cs  csharp-webapi-zero-config.csproj
examples/python-fastapi-service/: docspec.config.yaml  pyproject.toml
examples/python-fastapi-service/src/: __init__.py  config.py  main.py
examples/python-fastapi-service/src/models/: __init__.py  health_metric.py  sync_result.py
examples/python-fastapi-service/src/routes/: __init__.py  health.py  sync.py
examples/python-fastapi-service/src/services/: sync_service.py
examples/python-full-annotated/: order_service.py  pyproject.toml
examples/python-minimal/: app.py  pyproject.toml
java/: pom.xml
plugins/cargo/: Cargo.toml
plugins/cargo/src/: main.rs
scripts/: build-and-serve.sh
site/: package.json  pnpm-workspace.yaml  vitest.workspace.ts
spec/: intent-graph.schema.json
typescript/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+449 files in other folders)
