[project]
name = "python-fastapi-sync-service"
version = "1.0.0"
description = "DocSpec Python FastAPI Example — Data Sync Service"
requires-python = ">=3.11"
dependencies = [
    "docspec-py",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"
