[project]
name = "docspec-python-full-annotated"
version = "1.0.0"
description = "Tier 2 DocSpec example — full annotations in Python"
requires-python = ">=3.11"
dependencies = [
    "docspec-py",
]

[tool.docspec]
output = "docspec.json"
tier = 2

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
