[project]
name = "docspec-python-minimal"
version = "1.0.0"
description = "Tier 1 DocSpec example — minimal annotations in Python"
requires-python = ">=3.11"
dependencies = [
    "docspec-py",
]

[tool.docspec]
output = "docspec.json"
tier = 1

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
