[package]
name = "cargo-docspec"
version = "0.1.0"
edition = "2021"
description = "DocSpec Cargo subcommand — generate, validate, and check coverage of Rust documentation specifications"
license = "Apache-2.0"
repository = "https://github.com/docspec/docspec"
keywords = ["documentation", "docspec", "cargo-subcommand"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "cargo-docspec"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.18"
colored = "2"
walkdir = "2"
toml = "0.8"
